增加battle,division相关接口等

--- a/sunhomo-java/pom.xml
+++ b/sunhomo-java/pom.xml
@@ -212,6 +212,7 @@
         <module>sunhomo-quartz</module>
         <module>sunhomo-generator</module>
         <module>sunhomo-common</module>
+        <module>sunhomo-api</module>
     </modules>
     <packaging>pom</packaging>
 
