小程序简单调用接口获取数据

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@
 !gradle/wrapper/gradle-wrapper.jar
 
 target/
+photo/
+doc/
 !.mvn/wrapper/maven-wrapper.jar
 
 ######################################################################
