--- a/sunhomo-java/sunhomo-admin/src/main/resources/application.yml
+++ b/sunhomo-java/sunhomo-admin/src/main/resources/application.yml
@@ -16,7 +16,7 @@ sunhomo:
 # 开发环境配置
 server:
   # 服务器的HTTP端口，默认为80
-  port: 80
+  port: 443
   servlet:
     # 应用的访问路径
     context-path: /
@@ -27,6 +27,12 @@ server:
     max-threads: 800
     # Tomcat启动初始化的线程数，默认值25
     min-spare-threads: 30
+  ssl:
+    key-store: classpath:server.jks
+    key-store-password: Ij1&IdQlkLXhR209
+    key-store-type: JKS
+  http:
+    port: 80
  
 # 日志配置
 logging:
@@ -135,3 +141,9 @@ xss:
 swagger:
   # 是否开启swagger
   enabled: true
+weiChat:
+  miniProgram:
+    appId: wx0cac0d85b62f2830
+    appSecret: 1384a5076809cce29dd3de54675a6f8f
+
+
