--- a/sunhomo-java/club_framework/pom.xml
+++ b/sunhomo-java/club_framework/pom.xml
@@ -34,5 +34,10 @@
             <artifactId>druid-spring-boot-starter</artifactId>
             <version>1.1.24</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+            <version>1.3.0</version>
+        </dependency>
     </dependencies>
 </project>
