修改返回对象

--- a/sunhomo-java/club_api/src/main/resources/application.yml
+++ b/sunhomo-java/club_api/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 server:
   port: 443
   servlet:
-    context-path: /
+    context-path: /api
   ssl:
     key-store: classpath:server.jks
     key-store-password: Ij1&IdQlkLXhR209
