--- a/sunhomo-java/club_admin/pom.xml
+++ b/sunhomo-java/club_admin/pom.xml
@@ -16,6 +16,10 @@
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-quartz</artifactId>
+        </dependency>
+        <dependency>
             <groupId>cn.sunhomo</groupId>
             <artifactId>club_framework</artifactId>
             <version>1.0</version>
