完成抽签功能（包括小程序）

--- a/sunhomo-miniProgram/app.json
+++ b/sunhomo-miniProgram/app.json
@@ -2,6 +2,7 @@
   "pages": [
     "pages/activity/activities",
     "pages/activity/activity",
+    "pages/activity/divisions",
     "pages/my/my",
     "pages/mall/mall"
   ],
