--- a/sunhomo-java/club_admin/src/main/resources/application.yml
+++ b/sunhomo-java/club_admin/src/main/resources/application.yml
@@ -1,60 +1,3 @@
-server:
-  port: 80
-  servlet:
-    context-path: /admin
-
 spring:
-  datasource:
-    url: jdbc:mysql://124.70.145.232:3306/sunhomo_test?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8
-    username: sunhomo
-    password: ironpearl
-  thymeleaf:
-    mode: HTML
-    encoding: UTF-8
-    cache: false
-  #quartz
-  quartz:
-    #持久化到数据库方式
-    job-store-type: jdbc
-    initialize-schema: embedded
-    properties:
-      org:
-        quartz:
-          scheduler:
-            instanceName: MyScheduler
-            instanceId: AUTO
-          jobStore:
-            class: org.quartz.impl.jdbcjobstore.JobStoreTX
-            driverDelegateClass: org.quartz.impl.jdbcjobstore.StdJDBCDelegate
-            tablePrefix: QRTZ_
-            isClustered: true
-            clusterCheckinInterval: 10000
-            useProperties: false
-          threadPool:
-            class: org.quartz.simpl.SimpleThreadPool
-            threadCount: 10
-            threadPriority: 5
-            threadsInheritContextClassLoaderOfInitializingThread: true
-
-mybatis:
-  # 搜索指定包别名
-  type-aliases-package: cn.sunhomo.**.domain
-  # 配置mapper的扫描，找到所有的mapper.xml映射文件
-  mapper-locations: classpath*:mapper/**/*Mapper.xml
-  # 加载全局的配置文件
-  config-location: classpath:mybatis/mybatis-config.xml
-
-# pagehelper
-pagehelper:
-  helperDialect: mysql
-  reasonable: true
-  supportMethodsArguments: true
-  params: count=countSql
-
-club:
-  job:
-    #每日凌晨1点，根据活动情况汇总积分
-    point: 0 0 1 * * ?
-    #整点1分/31分时，检测活动状态(报名中->已结束)
-    activity: 0 1,31 * * * ?
-
+  profiles:
+    active: dev
