增加我的功能

--- a/sunhomo-miniProgram/app.json
+++ b/sunhomo-miniProgram/app.json
@@ -4,6 +4,8 @@
     "pages/activity/activity",
     "pages/activity/divisions",
     "pages/my/my",
+    "pages/my/myPoints",
+    "pages/my/myActivities",
     "pages/mall/mall"
   ],
   "window": {
