--- a/sunhomo-java/club_framework/pom.xml
+++ b/sunhomo-java/club_framework/pom.xml
@@ -43,5 +43,10 @@
             <artifactId>pagehelper-spring-boot-starter</artifactId>
             <version>1.3.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-spring</artifactId>
+            <version>1.6.0</version>
+        </dependency>
     </dependencies>
 </project>
