增加我的兑换，我的年度排名

--- a/sunhomo-miniProgram/app.json
+++ b/sunhomo-miniProgram/app.json
@@ -6,6 +6,8 @@
     "pages/my/my",
     "pages/my/myPoints",
     "pages/my/myActivities",
+    "pages/my/myRedeem",
+    "pages/my/myYearPointRange",
     "pages/mall/mall"
   ],
   "window": {
