小程序增加会员规则及权益

--- a/sunhomo-miniProgram/app.json
+++ b/sunhomo-miniProgram/app.json
@@ -8,6 +8,7 @@
     "pages/my/myActivities",
     "pages/my/myRedeem",
     "pages/my/myYearPointRange",
+    "pages/my/about",
     "pages/mall/mall"
   ],
   "window": {
