兑换商品交付（小程序端）

--- a/sunhomo-miniProgram/app.json
+++ b/sunhomo-miniProgram/app.json
@@ -9,6 +9,7 @@
     "pages/my/myRedeem",
     "pages/my/myYearPointRange",
     "pages/my/about",
+    "pages/my/redeemManagement",
     "pages/mall/mall"
   ],
   "window": {
