--- a/sunhomo-miniProgram/app.json
+++ b/sunhomo-miniProgram/app.json
@@ -4,6 +4,7 @@
     "pages/activity/activity",
     "pages/activity/divisions",
     "pages/battle/battles",
+    "pages/battle/battle",
     "pages/my/my",
     "pages/my/myPoints",
     "pages/my/myActivities",
