--- a/sunhomo-java/club_api/src/main/resources/application-prod.yml
+++ b/sunhomo-java/club_api/src/main/resources/application-prod.yml
@@ -9,7 +9,7 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://124.70.145.232:3306/sunhomo?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8
+    url: jdbc:mysql://124.70.145.232:3306/sunhomo?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8&allowMultiQueries=true
     username: sunhomo
     password: ironpearl
 
