增加我的约战功能

--- a/sunhomo-miniProgram/app.json
+++ b/sunhomo-miniProgram/app.json
@@ -8,6 +8,7 @@
     "pages/my/my",
     "pages/my/myPoints",
     "pages/my/myActivities",
+    "pages/my/myBattles",
     "pages/my/myRedeem",
     "pages/my/myYearPointRange",
     "pages/my/yearPoints",
