--- a/sunhomo-java/club_admin/src/main/resources/application-dev.yml
+++ b/sunhomo-java/club_admin/src/main/resources/application-dev.yml
@@ -5,7 +5,7 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://124.70.145.232:3306/sunhomo_test?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8
+    url: jdbc:mysql://124.70.145.232:3306/sunhomo_test?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8&allowMultiQueries=true
     username: sunhomo
     password: ironpearl
   thymeleaf:
