--- a/sunhomo-java/club_admin/src/main/resources/application-prod.yml
+++ b/sunhomo-java/club_admin/src/main/resources/application-prod.yml
@@ -5,7 +5,7 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://124.70.145.232:3306/sunhomo?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8
+    url: jdbc:mysql://124.70.145.232:3306/sunhomo?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8&allowMultiQueries=true
     username: sunhomo
     password: ironpearl
   thymeleaf:
@@ -57,4 +57,6 @@ club:
     point: 0 0 1 * * ?
     #整点1分/31分时，检测活动状态(报名中->已结束)
     activity: 0 1,31 * * * ?
+    #每日凌晨1分，清除未成团的盲盒约战
+    battle: 0 1 0 * * ?
 
