--- a/sunhomo-java/club_admin/src/main/resources/application-dev.yml
+++ b/sunhomo-java/club_admin/src/main/resources/application-dev.yml
@@ -57,4 +57,6 @@ club:
     point: 0 0 1 * * ?
     #整点1分/31分时，检测活动状态(报名中->已结束)
     activity: 0 1,31 * * * ?
+    #每日凌晨1分，清除未成团的盲盒约战
+    battle: 0 1 0 * * ?
 
