增加财务管理功能

--- a/sunhomo-miniProgram/app.json
+++ b/sunhomo-miniProgram/app.json
@@ -16,7 +16,9 @@
     "pages/my/battles",
     "pages/my/about",
     "pages/my/redeemManagement",
-    "pages/mall/mall"
+    "pages/mall/mall",
+    "pages/finance/financeManagement",
+    "pages/finance/addFinance"
   ],
   "window": {
     "backgroundTextStyle": "light",
