--- a/sunhomo-java/club_admin/pom.xml
+++ b/sunhomo-java/club_admin/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>club_admin</artifactId>
+    <version>1.0.20210520</version>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -41,6 +42,14 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>com.spotify</groupId>
+                <artifactId>dockerfile-maven-plugin</artifactId>
+                <version>1.4.8</version>
+                <configuration>
+                    <repository>sunhomo/${project.artifactId}:${project.version}</repository>
+                </configuration>
             </plugin>
         </plugins>
     </build>
