增加小程序快速建活动功能，增加连续早鸟积分

--- a/sunhomo-miniProgram/app.json
+++ b/sunhomo-miniProgram/app.json
@@ -3,6 +3,7 @@
     "pages/activity/activities",
     "pages/activity/activity",
     "pages/activity/divisions",
+    "pages/activity/createActivity",
     "pages/battle/battles",
     "pages/battle/battle",
     "pages/my/my",
