--- a/sunhomo-java/sunhomo_api/pom.xml
+++ b/sunhomo-java/sunhomo_api/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>sunhomo_api</artifactId>
+    <version>1.0.20210526</version>
     <dependencies>
         <dependency>
             <groupId>com.alibaba</groupId>
