--- a/sunhomo-java/sunhomo_api/src/main/resources/application-prod.yml
+++ b/sunhomo-java/sunhomo_api/src/main/resources/application-prod.yml
@@ -1,11 +1,11 @@
 server:
-  port: 443
+  port: 8443
   servlet:
     context-path: /api
-  ssl:
-    key-store: classpath:server.jks
-    key-store-password: Ij1&IdQlkLXhR209
-    key-store-type: JKS
+#  ssl:
+#    key-store: classpath:server.jks
+#    key-store-password: Ij1&IdQlkLXhR209
+#    key-store-type: JKS
 
 spring:
   datasource:
