--- a/sunhomo-java/sunhomo_api/src/main/resources/application-prod.yml
+++ b/sunhomo-java/sunhomo_api/src/main/resources/application-prod.yml
@@ -1,21 +1,21 @@
 server:
-  port: 8443
+  port: 443
   servlet:
     context-path: /api
-#  ssl:
-#    key-store: classpath:server.jks
-#    key-store-password: Ij1&IdQlkLXhR209
-#    key-store-type: JKS
+  ssl:
+    key-store: classpath:server.jks
+    key-store-password: Ij1&IdQlkLXhR209
+    key-store-type: JKS
 
 spring:
   datasource:
-    url: jdbc:mysql://124.70.145.232:3306/sunhomo?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8&allowMultiQueries=true
+    url: jdbc:mysql://112.126.82.130:3306/sunhomo?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8&allowMultiQueries=true
     username: sunhomo
     password: ironpearl
   redis:
     database: 0
     #单机版配置
-    host: 124.70.145.232
+    host: 112.126.82.130
     port: 6379
     password: ironpearl
     #集群配置
